[gd_scene load_steps=5 format=2]

[ext_resource path="res://TilesTransparent3.png" type="Texture" id=1]
[ext_resource path="res://Faller.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52, 57 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 10 )

[node name="Faller" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Plank" type="Sprite" parent="."]
position = Vector2( 0, -31 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 234.081, 700.247, 100.62, 26.4111 )

[node name="Plank2" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 234.081, 700.247, 100.62, 26.4111 )

[node name="Plank3" type="Sprite" parent="."]
position = Vector2( 0, 17 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 234.081, 700.247, 100.62, 26.4111 )

[node name="Plank4" type="Sprite" parent="."]
position = Vector2( 0, 41 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 234.081, 700.247, 100.62, 26.4111 )

[node name="Shell" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 245.235, 900.052, 104.314, 113.844 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sensor" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor"]
position = Vector2( 1, -68 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Sensor" to="." method="_on_Sensor_body_entered"]
